--- a/read.css
+++ b/read.css
@@ -14,7 +14,7 @@ html {
 }
 body {
   margin: 0;
-  background-image = url("http://i.huffpost.com/gen/1569133/images/o-CALIFORNIA-DROUGHT-facebook.jpg");
+  background-image = url("http://cdn.funcheap.com/wp-content/uploads/2014/08/Drought-iStock-680x463.jpg");
 }
 article,
 aside,
