--- a/read.css
+++ b/read.css
@@ -4860,6 +4860,7 @@ a.badge:focus {
   margin-bottom: 30px;
   color: inherit;
   background-color: #f7f7f7;
+  background-image: url("http://www.blastr.com/sites/blastr/files/water_572238684.jpg");
 }
 .jumbotron h1,
 .jumbotron .h1 {
